--- a/public/pages/video-text-message2.html
+++ b/public/pages/video-text-message2.html
@@ -6,14 +6,14 @@
 </head>
 
 <body class="body">
-    <div class="app-container">
+    <div class="div-block-2">
         <div>
-            <div class="chats-switcher">
+            <div class="div-block-6">
                 <div class="text-block">Your Group</div>
                 <div class="text-block less">Main Chat</div>
             </div>
         </div>
-        <div class="chats-team">
+        <div class="div-block-5">
             <div class="w-layout-grid green">
                 <div class="div-block-3">
                     <div class="div-block-4 green">
@@ -35,42 +35,96 @@
                 </div>
             </div>
         </div>
-        <div class="chats-msg-container">
-            <div class="div-block-10">
-                <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
-            </div>
-            <div class="div-block-10">
-                <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
-            </div>
-        </div>
-        <div class="chats-input-container">
+        <div class="div-block-7">
             <div class="text-block-2">Type here...</div>
             <div class="div-block-8">
                 <div class="div-block-9"></div>
                 <div class="div-block-9"></div>
             </div>
         </div>
-        
+        <div style="overflow: scroll; height: 50vh;">
+            <div class="div-block-11">
+                <div class="div-block-10">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+            <div class="div-block-11 received">
+                <div class="div-block-10 received">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+            <div class="div-block-11">
+                <div class="div-block-10">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+            <div class="div-block-11 received">
+                <div class="div-block-10 received">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+            <div class="div-block-11">
+                <div class="div-block-10">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+            <div class="div-block-11 received">
+                <div class="div-block-10 received">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+            <div class="div-block-11">
+                <div class="div-block-10">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+            <div class="div-block-11 received">
+                <div class="div-block-10 received">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+            <div class="div-block-11">
+                <div class="div-block-10">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+            <div class="div-block-11 received">
+                <div class="div-block-10 received">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+            <div class="div-block-11">
+                <div class="div-block-10">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+            <div class="div-block-11 received">
+                <div class="div-block-10 received">
+                    <div class="text-block-3">yo i can&#x27;t believe we have a quiz again this friday</div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="div-block"></div>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5faaf594a305ed6ada42af75"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="js/webflow.js" type="text/javascript"></script>
+    <!-- <script src="js/webflow.js" type="text/javascript"></script> -->
     <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 
+
 <style>
     .w-layout-grid {
-display: -ms-grid;
-    display: grid;
-    grid-auto-columns: 1fr;
-    -ms-grid-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: auto auto;
-    grid-template-rows: auto auto;
-    grid-row-gap: 16px;
-    grid-column-gap: 16px;
+        display: -ms-grid;
+        display: grid;
+        grid-auto-columns: 1fr;
+        -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
+        grid-row-gap: 16px;
+        grid-column-gap: 16px;
     }
 
     .body {
@@ -94,7 +148,7 @@ display: -ms-grid;
         width: 70vw;
     }
 
-    .app-container {
+    .div-block-2 {
         width: 30vw;
         padding-top: 10px;
         background-color: #000813;
@@ -168,12 +222,13 @@ display: -ms-grid;
         background-color: #219653;
     }
 
-    .chats-team {
+    .div-block-5 {
         padding-right: 5%;
+        padding-bottom: 5%;
         padding-left: 5%;
     }
 
-    .chats-switcher {
+    .div-block-6 {
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
@@ -185,12 +240,13 @@ display: -ms-grid;
         justify-content: space-around;
     }
 
-    .chats-input-container {
+    .div-block-7 {
         position: fixed;
         left: 0%;
         top: auto;
         right: 0%;
         bottom: 0%;
+        z-index: 999;
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
@@ -207,6 +263,7 @@ display: -ms-grid;
         -ms-flex-align: center;
         align-items: center;
         border-top: 1px solid #9b9b9b;
+        background-color: #000813;
     }
 
     .text-block-2 {
@@ -242,10 +299,13 @@ display: -ms-grid;
     }
 
     .div-block-10 {
-        margin: 5px;
         width: 70%;
         border-radius: 4px;
         background-color: #2563ad;
+    }
+
+    .div-block-10.received {
+        background-color: #596571;
     }
 
     .text-block-3 {
@@ -254,7 +314,7 @@ display: -ms-grid;
         color: #fff;
     }
 
-    .chats-msg-container {
+    .div-block-11 {
         position: relative;
         left: 0%;
         top: auto;
@@ -270,7 +330,7 @@ display: -ms-grid;
         -webkit-box-direction: normal;
         -webkit-flex-direction: row;
         -ms-flex-direction: row;
-        flex-direction: column;
+        flex-direction: row;
         -webkit-box-pack: end;
         -webkit-justify-content: flex-end;
         -ms-flex-pack: end;
@@ -279,6 +339,15 @@ display: -ms-grid;
         -webkit-align-items: flex-end;
         -ms-flex-align: end;
         align-items: flex-end;
+    }
+
+    .div-block-11.received {
+        margin-right: 0px;
+        margin-left: 16px;
+        -webkit-box-pack: start;
+        -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
     }
 
     .text-block-4 {
