adds meeting selection screen

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,6 @@
 
   </head>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <body class=body id="root">
+  <body class="body" id="root">
   </body>
 </html>
